--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,6 +96,7 @@
         android:layout_height="200dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:textColor="#000000"
         android:layout_marginEnd="8dp"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
